# agent-anatomy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  test.db
api/chat/: models.py
api/core/: config.py  db.py  middleware.py  routes.py
api/user/: models.py  routes.py  schemas.py  utils.py
backend/: Dockerfile  pyproject.toml
backend/api/: main.py
backend/api/chat/: models.py  routes.py  schemas.py  services.py
backend/api/core/: config.py  models.py  routes.py
backend/api/user/: services.py
backend/migrations/versions/: 168c39f0dcec_add_tool_fields_to_message.py  6d4ad435cc5b_add_messages_table.py  b7f3c2a1d9e4_drop_chat_thread_id.py
backend/workflow/: graph.py  models.py  nodes.py  state.py  tools.py
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: ChatPage.jsx  LoginPage.jsx
migrations/: env.py
migrations/versions/: 14bcdb2a60d7_add_chat_table.py  1aca7136863d_added_model_for_note.py  58a388de5366_initial_migration.py  8642274d53d2_added_user_id_to_note_model.py  caf3ae6b6370_add_chat_table.py
workflow/: models.py
