[project]
name = "agent-anatomy"
version = "0.1.0"
description = "A simple illustration of the anatomy of an AI agent as a personal research agent"
authors = [
    {name = "srini"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "alembic (>=1.18.4,<2.0.0)",
    "langgraph (>=1.2.1,<2.0.0)",
    "langchain-core (>=1.4.0,<2.0.0)",
    "langchain-anthropic (>=1.4.3,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
